@@ -20,6 +20,8 @@
         with net.* scripts that redefine them.  Better checking if scripts
         have issues or not.
 
+        * parse.c: Use poll() rather than eselect() and some other cleanups.
+
 05 Sep 2005 Martin Schlemmer <azarah@gentoo.org>
 
         * parse.c: Make sure field in parse_cache() is not used uninitialized.
